final adjust